--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -167,7 +167,7 @@ const schema = {
 
         <section id="faq" class="homepage-section">
             <div class="container">
-                <h2 class="section-title">Thắc Mắc Thường Gặp</h2>
+                <h2 class="section-title">Câu Hỏi Thường Gặp</h2>
                 
                 <div class="faq-container">
                     <details class="faq-item">
@@ -206,7 +206,7 @@ const schema = {
             <div class="container">
                 <div class="grid-2">
                     <div class="text-center" style="md:text-align: left;">
-                        <h2 class="section-subtitle">Cần tư vấn từ<br>chuyên gia?</h2>
+                        <h2 class="section-subtitle">Cần tư vấn từ chuyên gia?</h2>
                         <p class="section-text text-left">
                             Nếu trong quá trình đọc bài bạn vẫn còn điều gì băn khoăn hoặc muốn được giải thích chi tiết hơn, cứ thoải mái liên hệ với Phở Gõ nhé. Chúng mình luôn sẵn sàng hỗ trợ để bạn hiểu rõ vấn đề một cách nhanh chóng và chính xác nhất.
                         </p>
@@ -392,7 +392,7 @@ const schema = {
             object-fit: cover; border: 1px solid var(--card-back-border);
         }
         .blog-card .section-image {
-            height: 200px; margin-bottom: 1.5rem;
+            margin-bottom: 1.5rem;
         }
 
         /* CSS CHO VÒNG XOAY & ÁNH VÀNG */
