--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -97,6 +97,7 @@ const ogImageURL = new URL(ogImage, Astro.site);
             </div>
             
             <a href="/about-us" class="nav-link">Về chúng tôi</a>
+            <a href="/cards" class="nav-link">Các lá bài Tarot</a>
             <a href="/blog" class="nav-link">Blogs</a>
             <a href="/contact" class="nav-link">Liên hệ</a>
             <a href="#" id="history-nav-link" class="nav-link">Lịch sử</a>
