--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -88,7 +88,7 @@ const shareImage = new URL(post.data.image, Astro.site).href;
         <nav class="breadcrumbs">
           <a href="/">Trang chủ</a>
           <span class="divider">&raquo;</span>
-          <a href="/blog/bai-viet">Kiến Thức</a> 
+          <a href="/blog">Bài viết</a> 
           <span class="divider">&raquo;</span>
           <span class="current">{post.data.title}</span>
         </nav>
@@ -156,7 +156,7 @@ const shareImage = new URL(post.data.image, Astro.site).href;
           </div>
 
           <!-- Nút Quay Lại (Có class back-btn riêng để style hover mạnh hơn) -->
-          <a href="/blog/bai-viet" class="btn-outline back-btn" style="margin-top: 3rem;">&larr; Quay lại danh sách</a>
+          <a href="/blog" class="btn-outline back-btn" style="margin-top: 3rem;">&larr; Quay lại danh sách</a>
         </article>
 
       </div>
